projects/lungmen.akn/src/apps/homebox/homebox.deployment.yaml
---
# trunk-ignore-all(checkov/CKV_K8S_10,checkov/CKV_K8S_12,checkov/CKV_K8S_13,trivy/KSV-0015,trivy/KSV-0016,trivy/KSV-0018): We will address resource limits when we have consumption data for Homebox
# trunk-ignore(checkov/CKV_K8S_35): Homebox cannot be configured using a file for the database credentials.
# trunk-ignore(checkov/CKV2_K8S_6): Network policy will be handled separately
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homebox
  namespace: homebox
  labels:
    app.kubernetes.io/name: homebox
    app.kubernetes.io/instance: homebox
    app.kubernetes.io/part-of: homebox
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: homebox
      app.kubernetes.io/instance: homebox
  template:
    metadata:
      labels:
        app.kubernetes.io/name: homebox
        app.kubernetes.io/instance: homebox
    spec:
      automountServiceAccountToken: false
      containers:
        - name: homebox
          image: ghcr.io/sysadminsmedia/homebox
          livenessProbe:
            httpGet:
              path: /api/v1/status
              port: http
          ports:
            - name: http
              containerPort: 7745
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /api/v1/status
              port: http
          startupProbe:
            httpGet:
              path: /api/v1/status
              port: http
            periodSeconds: 5
            failureThreshold: 30
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsGroup: 23281
            runAsNonRoot: true
            runAsUser: 23281
          volumeMounts:
            - name: homebox-data
              mountPath: /data
            - name: tmp
              mountPath: /tmp
      securityContext:
        fsGroup: 23281
        runAsGroup: 23281
        runAsUser: 23281
        seccompProfile:
          type: RuntimeDefault
      volumes:
        - name: homebox-data
          emptyDir: {}
        - name: tmp
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: homebox
  namespace: homebox
  labels:
    app.kubernetes.io/name: homebox
    app.kubernetes.io/instance: homebox
    app.kubernetes.io/part-of: homebox
spec:
  selector:
    app.kubernetes.io/name: homebox
    app.kubernetes.io/instance: homebox
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
