projects/lungmen.akn/src/apps/homebox/homebox.httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    link.argocd.argoproj.io/external-link: https://catalogue.chezmoi.sh
  name: homebox-websecure
spec:
  hostnames:
    - catalogue.chezmoi.sh
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: external
      namespace: kube-system
      sectionName: chezmoi.sh-websecure
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: homebox
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
